crud sucursales/ error de zonas arreglado

--- a/dona/zonas/templates/zonas/confirmar_eliminar.html
+++ b/dona/zonas/templates/zonas/confirmar_eliminar.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}Confirmar Eliminación | DONA{% endblock %}
