--- a/dona/zonas/templates/zonas/form_zona.html
+++ b/dona/zonas/templates/zonas/form_zona.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}{% if form.instance.pk %}Editar{% else %}Crear{% endif %} Zona | DONA{% endblock %}
