--- a/dona/zonas/templates/zonas/lista_ubicaciones.html
+++ b/dona/zonas/templates/zonas/lista_ubicaciones.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}Lista de Ubicaciones | DONA{% endblock %}
