Descripción clara del cambio

--- a/dona/home/templates/home/Contrasenas.html
+++ b/dona/home/templates/home/Contrasenas.html
@@ -68,7 +68,7 @@
 
           // Redirigir después de 3 segundos
           setTimeout(function () {
-            window.location.href = "NuevaContraseña.html";
+            window.location.href = "{% url 'nueva_contrasena' %}";
           }, 3000);
         });
     </script>
