--- a/dona/home/templates/home/index2.html
+++ b/dona/home/templates/home/index2.html
@@ -35,7 +35,7 @@
         <a href="#funciona">Cómo Funciona</a>
         <!-- <a href="#estadisticas">Regístrate como Refugio</a>
         <a href="#acerca">Regístrate como voluntario</a> -->
-        <a href="/login" class="donar-btn">DONA!</a>
+        <a href="{% url 'loggin' %}" class="donar-btn">DONA!</a>
       </nav>
     </div>
   </header>
@@ -46,7 +46,7 @@
       <div class="container">
         <h1>Conectamos solidaridad con necesidad</h1>
         <p>Cada comida que se dona a través de DONA representa esperanza para quienes más lo necesitan.</p>
-        <a href="/login" class="cta dark">Comenzar Donación</a>
+        <a href="{% url 'loggin' %}" class="cta dark">Comenzar Donación</a>
       </div>
     </div>
   </section>
@@ -165,7 +165,7 @@
   <section class="donate" id="donar" data-aos="fade-up">
     <div class="container">
       <h2>¿Listo para ayudar?</h2>
-      <a href="/login" class="donar-btn">Haz tu donación</a>
+      <a href="{% url 'loggin' %}" class="donar-btn">Haz tu donación</a>
     </div>
   </section>
 
