Cambios en el dashboard como logo que no se mostraba y sombreados que estaban en la seccion incorrecta corregidos

--- a/dona/home/templates/home/MisDonaciones.html
+++ b/dona/home/templates/home/MisDonaciones.html
@@ -14,7 +14,7 @@
   <body>
     <div class="sidebar">
       <div class="logo">
-        <img src="../../Dona.jpg" alt="Logo DONA" />
+        <img src="{% static 'img/Dona.jpg' %}" alt="Logo DONA" />
         <span>DONA</span>
       </div>
       <ul class="menu">
