--- a/dona/home/templates/home/Perfil.html
+++ b/dona/home/templates/home/Perfil.html
@@ -14,7 +14,7 @@
   <body>
         <div class="sidebar">
       <div class="logo">
-        <img src="../../Dona.jpg" alt="Logo DONA" />
+        <img src="{% static 'img/Dona.jpg' %}" alt="Logo DONA" />
         <span>DONA</span>
       </div>
       <ul class="menu">
@@ -28,12 +28,12 @@
             ><i class="fas fa-plus-circle"></i> Publicar Donación</a
           >
         </li>
-        <li class="active">
+        <li >
           <a href="{% url 'Donaciones' %}"
             ><i class="fas fa-donate"></i> Mis Donaciones</a
           >
         </li>
-        <li>
+        <li class="active">
           <a href="{% url 'perfil' %}"><i class="fas fa-user"></i> Perfil</a>
         </li>
         <li>
