--- a/dona/static/CSS/Loggin.css
+++ b/dona/static/CSS/Loggin.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("../../Fondo Dona4.png");
+  background-image: url("/static/img/Fondo Dona4.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
