registro administradores/validacion de login/ redireccion de urls/ update models de administrador

--- a/dona/home/templates/home/index2.html
+++ b/dona/home/templates/home/index2.html
@@ -35,7 +35,7 @@
         <a href="#funciona">Cómo Funciona</a>
         <!-- <a href="#estadisticas">Regístrate como Refugio</a>
         <a href="#acerca">Regístrate como voluntario</a> -->
-        <a href="{% url 'loggin' %}" class="donar-btn">DONA!</a>
+        <a href="{% url 'usuarios:login' %}" class="donar-btn">DONA!</a>
       </nav>
     </div>
   </header>
@@ -166,7 +166,7 @@
   <section class="donate" id="donar" data-aos="fade-up">
     <div class="container">
       <h2>¿Listo para ayudar?</h2>
-      <a href="{% url 'loggin' %}" class="donar-btn">Haz tu donación</a>
+      <a href="{% url 'usuarios:login' %}" class="donar-btn">Haz tu donación</a>
     </div>
   </section>
 
