templates de publicar donacion y mis donaciones

--- a/dona/home/templates/home/home.html
+++ b/dona/home/templates/home/home.html
@@ -19,17 +19,17 @@
   </div>
   <ul class="menu">
     <li class="active">
-      <a href="{% url 'landing' %}">
+      <a href="{% url 'home' %}">
         <i class="fas fa-tachometer-alt"></i> Dashboard
       </a>
     </li>
     <li>
-      <a href="{% url 'publicardoonacion' %}">
+      <a href="{% url 'donaciones:publicacion_create' %}">
         <i class="fas fa-plus-circle"></i> Publicar Donación
       </a>
     </li>
     <li>
-      <a href="{% url 'Donaciones' %}">
+      <a href="{% url 'donaciones:publicacion_list' %}">
         <i class="fas fa-donate"></i> Mis Donaciones
       </a>
     </li>
