--- a/dona/templates/base.html
+++ b/dona/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,4 +12,4 @@
     {% block content %}{% endblock %}
     {% block extra_js %}{% endblock %}
 </body>
-</html>
+</html> {% endcomment %}
