--- a/dona/usuarios/templates/usuarios/editar_receptor.html
+++ b/dona/usuarios/templates/usuarios/editar_receptor.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Editar Receptor | DONA{% endblock %}
@@ -25,4 +25,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
