--- a/dona/usuarios/templates/usuarios/eliminar_receptor.html
+++ b/dona/usuarios/templates/usuarios/eliminar_receptor.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Eliminar Receptor | DONA{% endblock %}
@@ -16,4 +16,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
