--- a/dona/usuarios/templates/usuarios/eliminar_usuario.html
+++ b/dona/usuarios/templates/usuarios/eliminar_usuario.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Confirmar Desactivación | DONA{% endblock %}
@@ -17,4 +17,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
