--- a/dona/usuarios/templates/usuarios/form_administrador.html
+++ b/dona/usuarios/templates/usuarios/form_administrador.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Formulario Administrador | DONA{% endblock %}
@@ -15,4 +15,4 @@
         <a href="{% url 'usuarios:lista_administradores' %}" class="btn-cancel">Cancelar</a>
     </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
