--- a/dona/usuarios/templates/usuarios/lista_roles.html
+++ b/dona/usuarios/templates/usuarios/lista_roles.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Lista de Roles{% endblock %}
@@ -28,4 +28,4 @@
         </tbody>
     </table>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
