--- a/dona/usuarios/templates/usuarios/lista_usuarios.html
+++ b/dona/usuarios/templates/usuarios/lista_usuarios.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Administración de Usuarios | DONA{% endblock %}
@@ -67,4 +67,4 @@
     </div>
     {% endif %}
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
