--- a/dona/usuarios/templates/usuarios/registro_administrador.html
+++ b/dona/usuarios/templates/usuarios/registro_administrador.html
@@ -1,4 +1,4 @@
-{% extends 'registro_base.html' %}
+{% comment %} {% extends 'registro_base.html' %}
 {% load static %}
 
 {% block title %}Registro de Administrador | DONA{% endblock %}
@@ -60,4 +60,4 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
-{% endblock %}
+{% endblock %} {% endcomment %}
