--- a/dona/usuarios/templates/usuarios/registro_donador.html
+++ b/dona/usuarios/templates/usuarios/registro_donador.html
@@ -1,4 +1,4 @@
-{% extends 'registro_base.html' %}
+{% comment %} {% extends 'registro_base.html' %}
 {% load static %}
 
 {% block tab_donador %}active{% endblock %}
@@ -129,4 +129,4 @@
             </div>
         </div>
     </fieldset>
-{% endblock %}
+{% endblock %} {% endcomment %}
