--- a/dona/templates/registro_base.html
+++ b/dona/templates/registro_base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -71,4 +71,4 @@
 
     {% block extra_js %}{% endblock %}
 </body>
-</html>
+</html> {% endcomment %}
