--- a/dona/usuarios/templates/usuarios/editar_administrador.html
+++ b/dona/usuarios/templates/usuarios/editar_administrador.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
@@ -39,4 +39,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
