--- a/dona/usuarios/templates/usuarios/lista_administradores.html
+++ b/dona/usuarios/templates/usuarios/lista_administradores.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
@@ -60,4 +60,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
