--- a/dona/usuarios/templates/usuarios/login.html
+++ b/dona/usuarios/templates/usuarios/login.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -59,4 +59,4 @@
       </div>
     </div>
   </body>
-</html>
+</html> {% endcomment %}
