--- a/dona/usuarios/templates/usuarios/registro_receptor.html
+++ b/dona/usuarios/templates/usuarios/registro_receptor.html
@@ -1,4 +1,4 @@
-{% extends 'registro_base.html' %}
+{% comment %} {% extends 'registro_base.html' %}
 {% load static %}
 
 {% block tab_receptor %}active{% endblock %}
@@ -80,4 +80,4 @@
             </div>
         </div>
     </fieldset>
-{% endblock %}
+{% endblock %} {% endcomment %}
