--- a/dona/usuarios/templates/usuarios/registro_voluntario.html
+++ b/dona/usuarios/templates/usuarios/registro_voluntario.html
@@ -1,4 +1,4 @@
-{% extends 'registro_base.html' %}
+{% comment %} {% extends 'registro_base.html' %}
 {% load static %}
 
 {% block tab_voluntario %}active{% endblock %}
@@ -50,4 +50,4 @@
             </div>
         </div>
     </fieldset>
-{% endblock %}
+{% endblock %} {% endcomment %}
