--- a/dona/zonas/templates/zonas/confirmar_eliminar.html
+++ b/dona/zonas/templates/zonas/confirmar_eliminar.html
@@ -1,4 +1,4 @@
-{% extends 'zonas/base.html' %}
+{% comment %} {% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}Confirmar Eliminación | DONA{% endblock %}
@@ -17,4 +17,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
