--- a/dona/zonas/templates/zonas/lista_ubicaciones.html
+++ b/dona/zonas/templates/zonas/lista_ubicaciones.html
@@ -1,4 +1,4 @@
-{% extends 'zonas/base.html' %}
+{% comment %} {% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}Lista de Ubicaciones | DONA{% endblock %}
@@ -56,4 +56,4 @@
     </div>
     {% endif %}
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
