--- a/dona/zonas/templates/zonas/lista_zonas.html
+++ b/dona/zonas/templates/zonas/lista_zonas.html
@@ -1,4 +1,4 @@
-{% extends 'zonas/base.html' %}
+{% comment %} {% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}Lista de Zonas | DONA{% endblock %}
@@ -58,4 +58,4 @@
     </div>
     {% endif %}
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
