--- a/dona/zonas/templates/zonas/form_zona.html
+++ b/dona/zonas/templates/zonas/form_zona.html
@@ -1,4 +1,4 @@
-{% extends 'zonas/base.html' %}
+{% comment %} {% extends 'zonas/base.html' %}
 {% load static %}
 
 {% block title %}{% if form.instance.pk %}Editar{% else %}Crear{% endif %} Zona | DONA{% endblock %}
@@ -44,4 +44,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
