--- a/dona/donaciones/templates/donaciones/categoria_comida/detail.html
+++ b/dona/donaciones/templates/donaciones/categoria_comida/detail.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
@@ -59,4 +59,4 @@
         <a href="{% url 'donaciones:categoria_comida_list' %}" class="btn btn-secondary">Volver al listado</a>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
