--- a/dona/donaciones/templates/donaciones/categoria_comida/list.html
+++ b/dona/donaciones/templates/donaciones/categoria_comida/list.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
@@ -52,4 +52,4 @@
     </nav>
     {% endif %}
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
