--- a/dona/donaciones/templates/donaciones/comida/delete.html
+++ b/dona/donaciones/templates/donaciones/comida/delete.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
@@ -17,4 +17,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
