--- a/dona/donaciones/templates/donaciones/publicacion/delete.html
+++ b/dona/donaciones/templates/donaciones/publicacion/delete.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
@@ -18,4 +18,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
