--- a/dona/donaciones/templates/donaciones/publicacion/detail.html
+++ b/dona/donaciones/templates/donaciones/publicacion/detail.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
@@ -77,4 +77,4 @@
         <a href="{% url 'donaciones:publicacion_list' %}" class="btn btn-secondary">Volver a la lista</a>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
