--- a/dona/donaciones/templates/donaciones/publicacion/list.html
+++ b/dona/donaciones/templates/donaciones/publicacion/list.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -143,4 +143,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> {% endcomment %}
