--- a/dona/donaciones/templates/donaciones/sucursal/update.html
+++ b/dona/donaciones/templates/donaciones/sucursal/update.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
@@ -10,4 +10,4 @@
         <a href="{% url 'donaciones:sucursal_detail' object.pk %}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
