--- a/dona/solicitudes/templates/solicitudes/eliminar_solicitud.html
+++ b/dona/solicitudes/templates/solicitudes/eliminar_solicitud.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 
 {% block title %}Eliminar Solicitud | DONA{% endblock %}
 
@@ -14,4 +14,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
