--- a/dona/solicitudes/templates/solicitudes/form_solicitud.html
+++ b/dona/solicitudes/templates/solicitudes/form_solicitud.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Formulario Solicitud | DONA{% endblock %}
@@ -21,4 +21,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
