--- a/dona/solicitudes/templates/solicitudes/lista_solicitudes.html
+++ b/dona/solicitudes/templates/solicitudes/lista_solicitudes.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Lista de Solicitudes | DONA{% endblock %}
@@ -43,4 +43,4 @@
         </tbody>
     </table>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
