--- a/dona/notificaciones/templates/notificaciones/eliminar_notificacion.html
+++ b/dona/notificaciones/templates/notificaciones/eliminar_notificacion.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% block title %}Eliminar Notificación | DONA{% endblock %}
 
 {% block content %}
@@ -11,4 +11,4 @@
         <a href="{% url 'notificaciones:lista_notificaciones' %}">Cancelar</a>
     </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
