--- a/dona/notificaciones/templates/notificaciones/lista_notificaciones.html
+++ b/dona/notificaciones/templates/notificaciones/lista_notificaciones.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% comment %} {% extends 'usuarios/base.html' %}
 {% block title %}Lista de Notificaciones | DONA{% endblock %}
 
 {% block content %}
@@ -35,4 +35,4 @@
         </tbody>
     </table>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
